selfhost/test/typechecker/set/error_type_mismatch_bindingdecl.3.out
Error at %FILE_NAME%:1:38
Type mismatch
  |  val a: Set<String> = #{"abcd", Option.None_}
                                          ^
Expected: String
but instead found: <unknown>?
